using UnityEngine;
using UnityEngine.AI;
using System.Collections;

[RequireComponent(typeof(NavMeshAgent))]
[RequireComponent(typeof(Animator))]
public class EnemyAIController : MonoBehaviour
{
    public NavMeshAgent agent;
    public Transform player;
    public Animator animator;

    public LayerMask whatIsGround, whatIsPlayer;

    // ÄÃ£ Ä‘á»•i AIState.Wander thÃ nh AIState.Patrol
    public enum AIState { Patrol, Chase, Attack }
    public AIState currentState;

    [Header("Patrol")] // ÄÃ£ Ä‘á»•i tiÃªu Ä‘á» tá»« Wander sang Patrol
    public Transform[] patrolPoints; // ğŸ‘ˆ Máº£ng chá»©a cÃ¡c Ä‘iá»ƒm tuáº§n tra (Game Object)
    public float idleTimeAtPoint = 5f; // Thá»i gian dá»«ng (Idle) táº¡i má»—i Ä‘iá»ƒm
    private int currentPointIndex = 0;
    private bool isIdlingAtPoint = false;
    private float idleTimer;
    public float patrolSpeed = 30f; // Tá»‘c Ä‘á»™ di chuyá»ƒn khi tuáº§n tra

    [Header("Chase")]
    public float chaseSpeed = 30f; // Tá»‘c Ä‘á»™ khi truy Ä‘uá»•i

    [Header("Detection")]
    public float sightRange = 15f;
    public float attackRange = 2f;
    private bool playerInSightRange;
    private bool playerInAttackRange;

    [Header("Attack")]
    public float timeBetweenAttacks = 2f;
    private bool alreadyAttacked;
    public float attackDamage = 10f;

    [Header("Quest & Stats")]
    public string enemyID = "Bear";
    public float health = 100f;


    private void Awake()
    {
        agent = GetComponent<NavMeshAgent>();
        animator = GetComponent<Animator>();

        // ThÃªm thiáº¿t láº­p tá»‘c Ä‘á»™ vÃ  Ä‘á»™ mÆ°á»£t khi khá»Ÿi táº¡o
        agent.angularSpeed = 500f; 
        agent.acceleration = 20f;
        
        GameObject playerObject = GameObject.FindGameObjectWithTag("Player");
        if (playerObject != null)
        {
            player = playerObject.transform;
        }

        currentState = AIState.Patrol; // Báº¯t Ä‘áº§u á»Ÿ tráº¡ng thÃ¡i Patrol
        idleTimer = idleTimeAtPoint; // Khá»Ÿi táº¡o timer

        // Kiá»ƒm tra máº£ng Ä‘iá»ƒm tuáº§n tra, vÃ´ hiá»‡u hÃ³a náº¿u rá»—ng
        if (patrolPoints == null || patrolPoints.Length == 0)
        {
            Debug.LogError("Patrol Points array is empty! Assign Transform Game Objects in the Inspector.");
            this.enabled = false;
            return;
        }
    }

    private void Update()
    {
        // ... (Giá»¯ nguyÃªn logic Death vÃ  kiá»ƒm tra Player)

        if (health <= 0) { 
            if (GetComponent<Collider>().enabled) Die();
            return;
        }
        if (player == null) return;

        playerInSightRange = Physics.CheckSphere(transform.position, sightRange, whatIsPlayer);
        playerInAttackRange = Physics.CheckSphere(transform.position, attackRange, whatIsPlayer);

        // --- STATE MACHINE (Giá»¯ nguyÃªn, Ä‘Ã£ Ä‘Ãºng) ---
        if (playerInSightRange && playerInAttackRange)
        {
            currentState = AIState.Attack;
}
        else if (playerInSightRange)
        {
            currentState = AIState.Chase;
        }
        else // Khi khÃ´ng tháº¥y Player
        {
            currentState = AIState.Patrol; // Quay láº¡i Patrol
        }

        // --- EXECUTE STATE ---
        switch (currentState)
        {
            case AIState.Patrol:
                Patrol(); 
                break;
            case AIState.Chase:
                Chase();
                break;
            case AIState.Attack:
                Attack();
                break;
        }

        // --- ANIMATOR CONTROL (ÄÃƒ Sá»¬A) ---
        if (animator != null)
        {
            // isMoving chá»‰ Ä‘Ãºng khi Ä‘ang khÃ´ng á»Ÿ tráº¡ng thÃ¡i Idle trong Patrol
            bool isMoving = agent.velocity.magnitude > 0.1f && !isIdlingAtPoint; 
            animator.SetBool("isWalking", isMoving);

            // âš ï¸ DÃ²ng animator.SetTrigger("isAttack"); Ä‘Ã£ Ä‘Æ°á»£c xÃ³a khá»i Ä‘Ã¢y!
            // Trigger chá»‰ Ä‘Æ°á»£c gá»i 1 láº§n trong hÃ m Attack().
        }
    }

    // --- LOGIC MOVEMENT (Patrol) ---
    private void Patrol()
    {
        if (agent == null || !agent.enabled || !agent.isOnNavMesh)
            return;

        agent.isStopped = false;
        agent.speed = patrolSpeed;

        // 1. Kiá»ƒm tra xem Ä‘Ã£ Ä‘áº¿n Ä‘iá»ƒm tuáº§n tra chÆ°a
        // DÃ¹ng agent.remainingDistance vÃ¬ nÃ³ chÃ­nh xÃ¡c khi Agent Ä‘ang tÃ­nh toÃ¡n Ä‘Æ°á»ng Ä‘i.
        if (!agent.pathPending && agent.remainingDistance <= agent.stoppingDistance && !isIdlingAtPoint)
        {
            // ÄÃ£ Ä‘áº¿n Ä‘iá»ƒm, chuyá»ƒn sang tráº¡ng thÃ¡i IDLE
            isIdlingAtPoint = true;
            agent.isStopped = true; // Dá»«ng Agent
        }

        if (isIdlingAtPoint)
        {
            // 2. Quáº£n lÃ½ thá»i gian dá»«ng (Idle)
            idleTimer -= Time.deltaTime;

            // Chuyá»ƒn sang Ä‘iá»ƒm tiáº¿p theo khi háº¿t giá»
            if (idleTimer <= 0)
            {
                // Chuyá»ƒn sang Ä‘iá»ƒm tiáº¿p theo (Loop)
                currentPointIndex = (currentPointIndex + 1) % patrolPoints.Length;
                isIdlingAtPoint = false; // Báº¯t Ä‘áº§u di chuyá»ƒn
                idleTimer = idleTimeAtPoint; // Reset timer
                
                // Báº¯t Ä‘áº§u di chuyá»ƒn tá»›i Ä‘iá»ƒm má»›i ngay láº­p tá»©c
                agent.isStopped = false;
                agent.SetDestination(patrolPoints[currentPointIndex].position);
            }
        }
        else if (agent.remainingDistance <= agent.stoppingDistance) // Náº¿u Ä‘Ã£ hoÃ n táº¥t Ä‘Æ°á»ng Ä‘i trÆ°á»›c
        {
             // 3. Di chuyá»ƒn Ä‘áº¿n Ä‘iá»ƒm náº¿u chÆ°a cÃ³ Ä‘Æ°á»ng Ä‘i
             agent.SetDestination(patrolPoints[currentPointIndex].position);
        }
    }
    
    // --- LOGIC MOVEMENT (Chase) ---
    private void Chase()
    {
        if (agent == null || !agent.enabled || !agent.isOnNavMesh)
            return;

        isIdlingAtPoint = false;
agent.isStopped = false;
        agent.speed = chaseSpeed; // TÄƒng tá»‘c Ä‘á»™ lÃªn tá»‘c Ä‘á»™ Ä‘uá»•i
        
        // Thiáº¿t láº­p Ä‘iá»ƒm Ä‘áº¿n lÃ  vá»‹ trÃ­ cá»§a ngÆ°á»i chÆ¡i
        agent.SetDestination(player.position);
    }
    
    // --- LOGIC MOVEMENT (Attack) ---
    private void Attack()
    {
        if (agent == null || !agent.enabled || !agent.isOnNavMesh)
            return; 

        isIdlingAtPoint = false; 
        agent.isStopped = true;
        agent.ResetPath();
        agent.velocity = Vector3.zero;

        // Xoay máº·t vá» phÃ­a Player
        Vector3 directionToPlayer = (player.position - transform.position);
        directionToPlayer.y = 0;
        transform.rotation = Quaternion.LookRotation(directionToPlayer); 

        if (!alreadyAttacked)
        {
            alreadyAttacked = true;
            animator.SetTrigger("isAttack"); // DÃ¹ng Trigger cho Attack 1 láº§n
            
            // Call damage immediately (or prefer Animation Event)
            DealDamage(); 

            Invoke(nameof(ResetAttack), timeBetweenAttacks);
        }
    }
    
    // ... (CÃ¡c hÃ m DealDamage, ResetAttack, TakeDamage, Die giá»¯ nguyÃªn)
    public void TakeDamage(float damage)
    {
        health -= damage;
        if (health <= 0)
        {
            Die();
        }
    }
    private void DealDamage() 
    {
        if (Physics.CheckSphere(transform.position, attackRange, whatIsPlayer))
        {
            Debug.Log("Enemy dealt " + attackDamage + " damage.");
            if (PlayerState.Instance != null)
            {
                PlayerState.Instance.TakeDamage(attackDamage);
            }
              // ThÃªm logic gÃ¢y sÃ¡t thÆ°Æ¡ng thá»±c táº¿ vÃ o Ä‘Ã¢y
        }
    }

    private void ResetAttack()
    {
        alreadyAttacked = false;
        // Báº¯t Ä‘áº§u di chuyá»ƒn láº¡i khi cáº§n
        if (agent != null && agent.enabled && agent.isOnNavMesh)
        {
             // Äáº·t láº¡i isStopped = false sáº½ Ä‘Æ°á»£c xá»­ lÃ½ trong Chase/Patrol tiáº¿p theo
             // nhÆ°ng cÃ³ thá»ƒ Ä‘áº·t á»Ÿ Ä‘Ã¢y Ä‘á»ƒ pháº£n á»©ng nhanh hÆ¡n náº¿u cáº§n
        }
    }
    
    private void Die()
    {
        if (agent != null && agent.enabled)
        {
            agent.isStopped = true;
            agent.enabled = false;
        }

        animator.SetTrigger("isDead");
        GetComponent<Collider>().enabled = false;
        this.enabled = false;
    }
    
    // HÃ m RandomNavSphere Ä‘Ã£ bá»‹ loáº¡i bá» vÃ¬ khÃ´ng cáº§n Wander ná»¯a

    // --- OnDrawGizmosSelected Ä‘á»ƒ váº½ pháº¡m vi vÃ  Ä‘iá»ƒm tuáº§n tra ---
    private void OnDrawGizmosSelected()
    {
        // Váº½ pháº¡m vi phÃ¡t hiá»‡n vÃ  táº¥n cÃ´ng
        Gizmos.color = Color.yellow;
        Gizmos.DrawWireSphere(transform.position, sightRange);
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(transform.position, attackRange);

        // Váº½ cÃ¡c Ä‘iá»ƒm tuáº§n tra
        if (patrolPoints != null && patrolPoints.Length > 0)
        {
            Gizmos.color = Color.blue;
            for (int i = 0; i < patrolPoints.Length; i++)
            {
if (patrolPoints[i] != null) 
                {
                    Vector3 currentPos = patrolPoints[i].position; 
                    Gizmos.DrawSphere(currentPos, 0.5f);
                    
                    if (i < patrolPoints.Length - 1 && patrolPoints[i + 1] != null)
                    {
                        // Váº½ Ä‘Æ°á»ng ná»‘i giá»¯a cÃ¡c Ä‘iá»ƒm
                        Gizmos.DrawLine(currentPos, patrolPoints[i + 1].position);
                    }
                }
            }
            // Váº½ Ä‘Æ°á»ng ná»‘i tá»« Ä‘iá»ƒm cuá»‘i vá» Ä‘iá»ƒm Ä‘áº§u (loop)
            if (patrolPoints.Length > 1 && patrolPoints[patrolPoints.Length - 1] != null && patrolPoints[0] != null)
            {
                 Gizmos.DrawLine(patrolPoints[patrolPoints.Length - 1].position, patrolPoints[0].position);
            }
        }
    }
}